# ncmpp

./: .gitignore  CMakeLists.txt  README.md  color_log.py  debug_filename.py  embed_cover.py  find_ncm.py  find_ncm.zsh  ncmpp.py  test_input.txt  test_output.txt
ncmlib/include/ncmlib/: ncmdump.h
ncmlib/src/: NcmFile.cpp  NcmFile.h  base64.cpp  ncmdump.cpp  pkcs7.cpp  pkcs7.h  utils.cpp  utils.h
ncmpp/: main.py  pyproject.toml
ncmpp/src/: app_config.h  app_logic.cpp  app_logic.h  file_utils.h  main.cpp  pool.h
